--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "npm run build && vite preview"
+    "serve": "npm run build && vite preview"
   },
   "devDependencies": {
     "vite": "^2.9.9"
   },
   "dependencies": {
+    "@tensorflow/tfjs-node": "^3.18.0",
+    "canvas": "^2.9.1",
+    "face-api.js": "^0.22.2",
     "firebase": "^9.8.1"
   }
 }
